    * add 3rd alarm-clock (for 7150  7112 7141 7170  3070_V3  3270 7240 7270 7270_V3)
    * freetzmount (by hermann72pb)
    * reg SIP from outside (by MaxMuster)
    * remove AVM's NAS webinterface and internal memory file
    * remove (unneeded) piglet and isdn/pots bitfile(s)
    * remove AVM's webdav
    * remove AVM's printserv & usblp
    * remove AVM's lsof
    * remove AVM's strace

- New packages, libs, modules:
    * aiccu 20070115
    * apr 1.4.2
    * apr-util 1.3.10
    * autofs 5.0.5
    * berkeley-db 4.8.30
    * bind 9.8.0
    * bittwist 1.1
    * comgt 0.32
    * compcache 0.5.4 (kernel module)
    * cpmaccfg-cgi 1.0: Webinterface for cpmaccfg
    * digitemp 3.6.0
    * dnsd-cgi 1.0
    * dosfstools 3.0.11
    * ffmpeg 0.5.4
    * flex (libflex) 2.5.35
    * fortune 1.2
    * git 1.7.4.5
    * gnutls 2.10.1
    * gocr 0.49
    * gw6 5.1
    * hol 0.1
    * hplip 3.11.1
    * hp-utils 0.3.2
    * htop 0.9
    * htpdate 1.0.4
    * httpry 0.1.5
    * ifstat 1.1
    * iftop 0.17
    * igmpproxy 0.1
    * inadyn-mt-2.24.36
    * iptraf 3.0.1
    * ipsec-tools 0.7.2
    * iputils s20071127
    * irssi 0.8.15
    * lftp 4.0.5
    * libconfig 1.4.5
    * libdaemon 0.14
    * libdnet 1.12
    * libexif 0.6.20
    * libFLAC 1.2.1
    * libfreetz 0.4
    * libgd 2.0.35
    * libjs 1.6.20070208
    * libnet 1.1.4
    * libogg 1.2.2
    * libopenjpeg 1.4.0
    * liboping 1.6.1
    * libosip2 3.3.0
    * libpolarssl 0.14.2
    * libsynce 0.10.0
    * libtasn1 2.7
    * libusb1 1.0.8
    * libvorbis 1.3.2
    * libxml 2.7.8
    * libxslt/xsltproc 1.1.26
    * lighttpd 1.4.28
    * mdev 0.6.2: First try to replace AVM's hotplug chain
      depends on 7170, 7240 and 7270.
    * mediatomb 0.12.1
    * minicom-2.4
    * minidlna 1.0.19
    * mini-snmpd 1.2b
    * nc6
    * ncftp-3.2.5
    * netpbm-10.35.79
    * ndas-1.1-22
    * nhipt iptables cgi 0.8.3a
    * ngircd 17.1
    * nmap 4.68
    * noip 2.1.9
    * oidentd 2.0.8
    * onlinechanged-cgi 0.1