@@ -70,8 +70,6 @@
 /dev/led	c	666	0	0	247	0	0	0	-
 /dev/new_led	c	666	0	0	251	0	0	0	-
 /dev/Piglet	c	666	0	0	250	0	0	0	-
-/dev/rtc	c	777	0	0	254	0	0	0	-
-/dev/rtc1	c	777	0	0	254	1	0	0	-
 /dev/tffs	c	666	0	0	240	0	0	0	-
 /dev/tiatm	c	644	0	0	230	0	0	0	-
 /dev/ubik_boot_0	c	666	0	0	245	0	0	0	-
