@@ -629,7 +629,6 @@ config FREETZ_REMOVE_CAPIOVERTCP
 config FREETZ_REMOVE_CHRONYD
 	bool "Remove chronyd"
 	depends on FREETZ_HAS_CHRONYD
-	default y if FREETZ_TYPE_FON_WLAN_7390
 	default n
 	help
 		Removes AVM's time synchronization tool (chrony) and related files.
