@@ -74,6 +74,7 @@ Latest changes:
     * remove AVM's printserv & usblp
     * remove AVM's lsof
     * remove AVM's strace
+    * remove chronyd
 
 - New packages, libs, modules:
     * aiccu 20070115
